# merchant_verifier

./: .gitignore  main.py  pyproject.toml  requirements.txt
input/: sample_format.xlsx
src/: address_matcher.py  data_extractor.py  merchant_verifier.py  report_generator.py  web_automation.py
src/config/: logging_config.py
src/utils/: check_excel_format.py  check_excel_row_structure.py  count_merchants.py
tests/: test_address_matcher.py  test_data_extractor.py
