[project]
name = "merchant-verifier"
version = "0.1.0"
description = "An automated system to verify merchant information by cross-referencing Excel data with online sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==22.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
    "openpyxl==3.1.2",
    "pandas==2.2.3",
    "pytest==6.2.5",
]
