[project]
name = "merchant-verifier"
version = "0.1.0"
description = "An automated system to verify merchant information by cross-referencing Excel data with online sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==22.3.0",
    "flake8==4.0.1",
    "fuzzywuzzy==0.18.0",
    "isort==5.10.1",
    "openpyxl==3.1.2",
    "pandas==2.2.3",
    "playwright==1.52.0",
    "pytest==6.2.5",
    "pytest-mock==3.14.0",
    "requests==2.32.3",
]
